bins/havenc/tests/cases/fail/test_match_arm_after_wildcard.hv
//@ error: unreachable match arm after `_`
enum S { A, B }

@export
proc main() i32 {
    let s: S = S::A;
    match (s) {
        S::A -> { return 1; }
        _ -> { return 0; }
        S::B -> { return 2; }
    }
}
